<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TXT_TITLE"/>

        <EditText
            android:id="@+id/emailEdTxt"
            style="@style/TXT_CONTENT_BLACK"
            android:theme="@style/EDTXT_LOGIN"
            android:background="@drawable/bg_gray_black_edtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="true"
            android:hint="@string/login_email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/pwEdTxt"
            style="@style/TXT_CONTENT_BLACK"
            android:theme="@style/EDTXT_LOGIN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="true"
            android:background="@drawable/bg_gray_black_edtxt"
            android:hint="@string/login_pw"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/emailEdTxt"
            app:layout_constraintStart_toStartOf="@+id/emailEdTxt"
            app:layout_constraintTop_toBottomOf="@+id/emailEdTxt" />

        <CheckBox
            android:id="@+id/autoLoginChkBtn"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:button="@null"
            android:background="@drawable/bg_blue_chekbox"
            app:layout_constraintStart_toStartOf="@+id/pwEdTxt"
            app:layout_constraintTop_toBottomOf="@+id/pwEdTxt" />

        <TextView
            android:id="@+id/textView"
            style="@style/TXT_CONTENT_BLACK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/login_auto_login"
            app:layout_constraintBottom_toBottomOf="@+id/autoLoginChkBtn"
            app:layout_constraintStart_toEndOf="@+id/autoLoginChkBtn"
            app:layout_constraintTop_toTopOf="@+id/autoLoginChkBtn" />

        <Button
            android:id="@+id/forgotPwBtn"
            android:stateListAnimator="@null"
            android:minWidth="0dp"
            android:minHeight="0dp"
            style="@style/TXT_INFO"
            android:theme="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_underline_gray"
            android:text="@string/login_forgot_pw"
            app:layout_constraintEnd_toEndOf="@+id/pwEdTxt"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <Button
            android:id="@+id/usingEmailLoginBtn"
            android:stateListAnimator="@null"
            style="@style/TXT_CONTENT_WHITE_BOLD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded_black_btn"
            android:text="@string/login_login_using_email"
            app:layout_constraintEnd_toEndOf="@+id/pwEdTxt"
            app:layout_constraintStart_toStartOf="@+id/pwEdTxt"
            app:layout_constraintTop_toBottomOf="@+id/forgotPwBtn" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/gray9E"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/usingEmailLoginBtn"
            app:layout_constraintStart_toStartOf="@+id/usingEmailLoginBtn"
            app:layout_constraintTop_toBottomOf="@+id/usingEmailLoginBtn" />

        <Button
            android:id="@+id/button3"
            style="@style/TXT_CONTENT_BLACK"
            android:stateListAnimator="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_underline_black"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/login_sign_up"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <Button
            android:id="@+id/forgotEmailBtn"
            style="@style/TXT_CONTENT_BLACK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/bg_underline_black"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:stateListAnimator="@null"
            android:text="@string/login_forgot_email"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TXT_INFO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login_simple_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/gray9E"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/usingEmailLoginBtn"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/gray9E"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/usingEmailLoginBtn"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <Button
            android:id="@+id/naverLoginBtn"
            android:layout_width="@dimen/SIMPLE_LOGIN_BTN_SIZE"
            android:layout_height="@dimen/SIMPLE_LOGIN_BTN_SIZE"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/googleLoginBtn"
            app:layout_constraintEnd_toStartOf="@+id/googleLoginBtn"
            app:layout_constraintStart_toStartOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="@+id/googleLoginBtn" />

        <Button
            android:id="@+id/googleLoginBtn"
            android:layout_width="@dimen/SIMPLE_LOGIN_BTN_SIZE"
            android:layout_height="@dimen/SIMPLE_LOGIN_BTN_SIZE"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/KakaoLoginBtn"
            android:layout_width="@dimen/SIMPLE_LOGIN_BTN_SIZE"
            android:layout_height="@dimen/SIMPLE_LOGIN_BTN_SIZE"
            app:layout_constraintBottom_toBottomOf="@+id/googleLoginBtn"
            app:layout_constraintEnd_toEndOf="@+id/divider3"
            app:layout_constraintStart_toEndOf="@+id/googleLoginBtn"
            app:layout_constraintTop_toTopOf="@+id/googleLoginBtn" />

        <Button
            android:id="@+id/pwVisibilityBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_visibility_gray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/pwEdTxt"
            app:layout_constraintEnd_toEndOf="@+id/pwEdTxt"
            app:layout_constraintTop_toTopOf="@+id/pwEdTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>